--- a/dev/templates/dev/home.html
+++ b/dev/templates/dev/home.html
@@ -4,7 +4,40 @@
 
 {% if user.is_authenticated %}
 
-    <h1>U r authed</h1>
+<h1>Welcome, {{user.username}} </h1>
+<br>
+
+<table class="table table-striped table-hover table-bordered">
+    <thead>
+      <tr>
+        <th scope='col'> Id </th>
+        <th scope='col'> First name </th>
+        <th scope='col'> Last name </th>
+        <th scope='col'> Email </th>
+        <th scope='col'> Phone </th>
+        <th scope='col'> Address </th>
+        <th scope='col'> City </th>
+        <th scope='col'> State </th>
+        <th scope='col'> zipcode </th>
+      </tr>
+    </thead>
+    <tbody>
+      {% for record in records %}
+        <tr>
+            <td scope='row'><a href="#"> {{record.pk}} </a></td>
+            <td scope='row'> {{record.first_name}} </td>
+            <td scope='row'> {{record.last_name}} </td>
+            <td scope='row'> {{record.email}} </td>
+            <td scope='row'> {{record.phone}} </td>
+            <td scope='row'> {{record.address}} </td>
+            <td scope='row'> {{record.city}} </td>
+            <td scope='row'> {{record.state}} </td>
+            <td scope='row'> {{record.zipcode}} </td>
+        </tr>
+      
+      {% endfor %}
+    </tbody>
+  </table>
 
 {% else %}
     <div class="col-md-6 offset-md-3">
