--- a/dev/templates/dev/home.html
+++ b/dev/templates/dev/home.html
@@ -1,59 +1,66 @@
-{% extends "base.html" %}
+{% extends "base.html" %} {% block content %} {% if user.is_authenticated %}
 
-{% block content %}
-
-{% if user.is_authenticated %}
-
-<h1>Welcome, {{user.username}} </h1>
-<br>
+<h1>Welcome, {{user.username}}</h1>
+<br />
 
 <table class="table table-striped table-hover table-bordered">
-    <thead>
-      <tr>
-        <th scope='col'> Id </th>
-        <th scope='col'> First name </th>
-        <th scope='col'> Last name </th>
-        <th scope='col'> Email </th>
-        <th scope='col'> Phone </th>
-        <th scope='col'> Address </th>
-        <th scope='col'> City </th>
-        <th scope='col'> State </th>
-        <th scope='col'> zipcode </th>
-      </tr>
-    </thead>
-    <tbody>
-      {% for record in records %}
-        <tr>
-            <td scope='row'><a href="#"> {{record.pk}} </a></td>
-            <td scope='row'> {{record.first_name}} </td>
-            <td scope='row'> {{record.last_name}} </td>
-            <td scope='row'> {{record.email}} </td>
-            <td scope='row'> {{record.phone}} </td>
-            <td scope='row'> {{record.address}} </td>
-            <td scope='row'> {{record.city}} </td>
-            <td scope='row'> {{record.state}} </td>
-            <td scope='row'> {{record.zipcode}} </td>
-        </tr>
-      
-      {% endfor %}
-    </tbody>
-  </table>
+  <thead>
+    <tr>
+      <th scope="col">Id</th>
+      <th scope="col">First name</th>
+      <th scope="col">Last name</th>
+      <th scope="col">Email</th>
+      <th scope="col">Phone</th>
+      <th scope="col">Address</th>
+      <th scope="col">City</th>
+      <th scope="col">State</th>
+      <th scope="col">zipcode</th>
+    </tr>
+  </thead>
+  <tbody>
+    {% for record in records %}
+    <tr>
+      <td scope="row">
+        <a href="{% url 'record-details' record.slug %}"> {{record.pk}} </a>
+      </td>
+      <td scope="row">{{record.first_name}}</td>
+      <td scope="row">{{record.last_name}}</td>
+      <td scope="row">{{record.email}}</td>
+      <td scope="row">{{record.phone}}</td>
+      <td scope="row">{{record.address}}</td>
+      <td scope="row">{{record.city}}</td>
+      <td scope="row">{{record.state}}</td>
+      <td scope="row">{{record.zipcode}}</td>
+    </tr>
+
+    {% endfor %}
+  </tbody>
+</table>
 
 {% else %}
-    <div class="col-md-6 offset-md-3">
-        <h1>Login</h1>
-        <br>
-        <form action="{% url "home" %}" method='POST'>
-            {% csrf_token %}
-                <div class="mb-3">
-                <input type="text" class="form-control" name='username' placeholder='Username' required>
-                </div>
-                <div class="mb-3">
-                <input type="password" class="form-control" name='password1' placeholder='Password' required>
-                </div>
-                <br>
-                <button type="submit" class="btn btn-secondary">Login</button>
-        </form>
-    </div>
-{% endif %}
-{% endblock content %}
+<div class="col-md-6 offset-md-3">
+  <h1>Login</h1>
+  <br />
+  <form action="{% url "home" %}" method='POST'> {% csrf_token %}
+  <div class="mb-3">
+    <input
+      type="text"
+      class="form-control"
+      name="username"
+      placeholder="Username"
+      required
+    />
+  </div>
+  <div class="mb-3">
+    <input
+      type="password"
+      class="form-control"
+      name="password1"
+      placeholder="Password"
+      required
+    />
+  </div>
+  <br />
+  <button type="submit" class="btn btn-secondary">Login</button>
+</div>
+{% endif %} {% endblock content %}
