--- a/dev/templates/dev/home.html
+++ b/dev/templates/dev/home.html
@@ -36,6 +36,9 @@
     {% endfor %}
   </tbody>
 </table>
+<a href="{% url 'add-record' %}" type="button" class="btn btn-secondary">
+  Add
+</a>
 
 {% else %}
 <div class="col-md-6 offset-md-3">
